--- a/api/database.yml
+++ b/api/database.yml
@@ -7,7 +7,7 @@ development:
   pool: 5
 
 test:
-  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@db:5432/api_test?sslmode=disable"}}
+  url: {{envOr "TEST_DATABASE_URL" "postgres://postgres:postgres@db:5432/shop?sslmode=disable"}}
 
 production:
-  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@db:5432/api_production?sslmode=disable"}}
+  url: {{envOr "DATABASE_URL" "postgres://postgres:postgres@db:5432/shop?sslmode=disable"}}
