--- a/glide.yaml
+++ b/glide.yaml
@@ -1,4 +1,4 @@
-package: github.com/AndriiOmelianenko/workshops/shop/api
+package: github.com/AndriiOmelianenko/shop-api
 import:
 - package: github.com/gobuffalo/buffalo
   version: ~0.12.3
@@ -32,6 +32,8 @@ import:
 - package: github.com/unrolled/secure
 - package: github.com/icrowley/fake
 - package: github.com/corpix/uarand
+- package: github.com/gorilla/mux
+  version: ~1.6.2
 testImport:
 - package: github.com/gobuffalo/packr
   version: ~1.11.1
