--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,17 @@
 version: "2.0"
 services:
   db:
-    image: postgres:10.4-alpine
+    image: mongo:4.0
     ports:
-      - "5432:5432"
+      - "27017:27017"
     environment:
-      - POSTGRES_USER=postgres
-      - POSTGRES_PASSWORD=postgres
-      - POSTGRES_DB=shop
+      - MONGO_INITDB_ROOT_USERNAME=mongo
+      - MONGO_INITDB_ROOT_PASSWORD=mongo
 
   api:
     image: shop-api
     ports:
-      - "8080:3000"
+      - "8080:8080"
     mem_limit: 150Mb
     memswap_limit: 150Mb
     links:
